--- a/HIOFCommuting/AndroidManifest.xml
+++ b/HIOFCommuting/AndroidManifest.xml
@@ -47,8 +47,8 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/fbid" />
 
-        <!--  <activity android:name="com.facebook.LoginActivity" >
-        </activity>-->
+        <activity android:name="com.facebook.LoginActivity" >
+        </activity>
         <!-- Goolge Maps API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
