--- a/HIOFCommuting/AndroidManifest.xml
+++ b/HIOFCommuting/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="no.hiof.hiofcommuting"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.1" >
 
     <permission
         android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE"
@@ -18,6 +18,14 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <permission
+        android:name="no.hiof.hiofcommuting.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="no.hiof.hiofcommuting.gcm.permission.C2D_MESSAGE" />
 
     <!-- Required OpenGL ES 2.0. for Maps V2 -->
     <uses-feature
@@ -26,7 +34,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/hiofcommutinglogo"
+        android:icon="@drawable/campuskjoring_144"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -61,13 +69,22 @@
         <activity
             android:name="no.hiof.hiofcommuting.hiofcommuting.UserInformationActivity"
             android:label="sett inn ->" >
-<!--  //@string/title_activity_user_information -->
+
+            <!-- //@string/title_activity_user_information -->
         </activity>
         <activity
             android:name="no.hiof.hiofcommuting.chat.ChatActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:label="@string/title_activity_chat" >
+            android:label="@string/title_activity_chat"
+            android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
-    </application>
 
+        <receiver
+            android:name="no.hiof.hiofcommuting.hiofcommuting.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="no.hiof.hiofcommuting.gcm" />
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
